# e3db-core

./: .gitignore  CMakeLists.txt  Development.md  HEADER  LICENSE  LICENSE.md  Makefile  README.md  example_data.json  example_meta.json
cmake/Modules/: FindSodium.cmake  FindmbedTLS.cmake
cmd/: CMakeLists.txt  e3db.c  example_meta.json  main.c
example-config/: config_json.c  config_json.h
examples/: CMakeLists.txt  Example.md  config.json  example_data.json  hr_example.c
lib/: CMakeLists.txt  cJSON.c  cdecode.c  cencode.c  curl.c  curl.h  decode.h  e3db_base64.c  e3db_base64.h  e3db_client.c  e3db_client.h  e3db_core.c  e3db_core.h  e3db_mem.h  http_parser.c  http_parser.h  mbedtls_base64.h  sds.h  sdsalloc.h  tiny-curl.c  tiny-curl.h
src/: cJSON.c  cdecode.h  cencode.h  e3db_base64.c  e3db_base64.h  e3db_client.c  e3db_client.h  e3db_core.c  e3db_core.h  e3db_mem.c  e3db_mem.h  encode.h  main.c
tests/: list-records.c
